--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -1,3 +1,5 @@
+include ../mixins/mixins
+
 doctype html
 html(lang="en")
     head
@@ -28,6 +30,8 @@ html(lang="en")
                     a(href="/logout")
                         i.fas.fa-sign-out-alt 
                 .mainSectionContainer.col-10.col-md-8.col-lg-6
+                    .titleContainer 
+                        h1 #{pageTitle}
                     block content
                 div.d-none.d-md-block.col-md-2.cl-lg-4
                     span third column
